Changed body of text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <h1>Welcome to Github Web Workshop!</h1>
 
-<p>Hello World!</p>
+<p>Hello World! This is Mary Kate's new webpage</p>
 
 </body>
 
